Update Licence field in wrapper response
