# api/swagger/schemas/cross_referencing/_by_omim.yaml
@@ -6,6 +6,9 @@ properties:
       __count:
         type: integer
         example: 3
+      __licence:
+        type: string
+        example: "https://creativecommons.org/licenses/by/4.0"
       results:
         type: array
         items:
@@ -13,7 +16,7 @@ properties:
             properties:
               Date:
                 type: string
-                example: "2022-02-01 04:37:21"
+                example: "2022-04-01 04:40:40"
               DisorderDisorderAssociation:
                 type: string
                 example: null
@@ -71,8 +74,8 @@ properties:
               Synonym:
                 type: array
                 items:
-                    type: string
-                    example: "AxD"
+                  type: string
+                example: [AxD]
               Typology:
                 type: string
                 example: "Disease"
